--- a/src/pages/toybox/package.json
+++ b/src/pages/toybox/package.json
@@ -1,28 +1,23 @@
 {
-  "homepage": "https://github.com/bananaericapple/test_my_ReactProject",
-  "name": "my-websites",
+  "name": "toy-box",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6",
-    "three": "^0.181.2"
+    "lucide-react": "^0.553.0",
+    "three": "^0.181.1",
+    "@google/genai": "^1.29.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "gh-pages": "^6.3.0",
-    "three-stdlib": "^2.36.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
